chore: CORS allowedMethods 명시적으로 설정
(#94)